# oura-analysis

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
oura_analysis/: analysis_query.sql  fetch_data_from_oura_cloud.py  loader.py  numeric_data_trends_plotting.ipynb  oura_api.py  settings.py  step_1_download_oura_data.py  step_2_analyse.py  timeseries_trends_plotting.ipynb  trends_plotting.ipynb  unsupervised_learning_csv_exploration.ipynb
reports/: analysis-log.md
tests/: oura_timeseries_for_test.json  oura_trends_for_test.csv  test_loader.py
